--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
-  "routes":[
+  "buildCommand": "vite build",
+  "rewrites": [
     {
-      "src":"/[^.]+",
-      "dest":"/"
+      "source": "/(.*)",
+      "destination": "/"
     }
   ]
 }
