--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,3 @@
 {
-  "buildCommand": "vite build",
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/"
-    }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
